# django-template

./: .env.dist  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt
app/: admin.py  apps.py  settings.py  urls.py
app/core/: admin.py  functions.py  jobs.py  pagination.py  permissions.py  response.py  serializers.py  storages.py  views.py
app/scripts/: dummy_script.py
app_accounts/: admin.py  apps.py  authentication.py  exceptions.py  forms.py  managers.py  models.py  serializers.py  urls.py  views.py
app_accounts/migrations/: 0001_initial.py  0002_auto_20220604_1447.py
app_notifications/: apps.py  handlers.py  managers.py  models.py
app_notifications/migrations/: 0001_initial.py
database/: app.sqlite3
docs/: django-debug-toolbar.txt  django-extensions.txt  notes.txt
nginx/: nginx.conf
scripts/: deploy.sh  entrypoint.sh  makemigrations.sh  migrate.sh  migrate_and_seed.sh  rungunicorn.sh  runserver  runserver.sh  setup.sh  shell.sh  tail_logs.sh
static/css/: admin.css
static/js/: admin.js
templates/admin/: base_site.html
templates/emails/: reset_password.html  reset_password_success.html
utils/: enums.py  helpers.py  tests.py
