[tool.poetry]
name = "django-template"
version = "0.1.0"
description = "template for django project"
authors = ["Sheikh Haris Zahid <sheikh.haris.zahid@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^5.2.0"
coreapi = "^2.3.3"
django-environ = "^0.8.1"
django-extensions = "^3.1.5"
django-filter = "^21.1"
django-storages = "^1.12.3"
django-cors-headers = "^3.12.0"
black = "^22.3.0"
colorlog = "^6.6.0"
django-debug-toolbar = "^3.4.0"
Werkzeug = "2.0.2"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
